<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main">
    <merge>

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:visibility="visible"
            app:cardBackgroundColor="#262a34"
            app:cardCornerRadius="@dimen/_6sdp"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/crPreview">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingStart="@dimen/_12sdp"
                android:paddingTop="@dimen/_16sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:paddingBottom="@dimen/_12sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/san_r"
                    android:text="@string/txt_guide"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/san_r"
                    android:text="@string/txt_guide_1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/san_r"
                    android:text="@string/txt_guide_2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/san_r"
                    android:text="@string/txt_guide_3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/san_r"
                    android:text="@string/txt_guide_4"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/san_r"
                    android:text="@string/txt_guide_5"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/san_r"
                    android:text="@string/txt_guide_6"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_marginTop="@dimen/_10sdp"
                    android:id="@+id/btGuideVideoNow"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_34sdp"
                    android:layout_weight="1"
                    android:background="@drawable/ripper_cta_watch_video"
                    android:fontFamily="@font/san_m"
                    android:text="@string/txt_guide_video"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toStartOf="@+id/btStartDownload"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/rlEdt"
                    app:layout_constraintTop_toTopOf="@+id/btStartDownload" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>
    </merge>
</layout>