<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:cardCornerRadius="@dimen/_12sdp"
        app:cardUseCompatPadding="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:gravity="center_vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    app:srcCompat="@drawable/ic_rating"
                    android:layout_marginStart="@dimen/_16sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:fontFamily="@font/san_m"
                    android:text="@string/txt_rate_title"
                    android:textColor="@color/black" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:includeFontPadding="false"
                android:lineSpacingExtra="@dimen/_2sdp"
                android:paddingStart="@dimen/_12sdp"
                android:paddingEnd="@dimen/_12sdp"
                android:fontFamily="@font/san_r"
                android:text="@string/txt_rate_message"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnGrant"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@drawable/ripper_cta_gray"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/txt_rate"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btClose"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_gravity="end|top"
            android:layout_margin="@dimen/_5sdp"
            android:alpha="0.8"
            android:background="?android:selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/_8sdp"
            app:srcCompat="@drawable/ic_close"
            app:tint="@color/black" />

    </androidx.cardview.widget.CardView>

</layout>