<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black181a20"
        tools:context=".ui.MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            app:cardBackgroundColor="@color/black181a20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:fontFamily="@font/san_m"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

                <FrameLayout
                    android:id="@+id/btDownload"
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="@dimen/_28sdp"
                        android:layout_height="@dimen/_28sdp"
                        android:padding="@dimen/_6sdp"
                        app:srcCompat="@drawable/ic_download"
                        app:tint="@color/white" />

                    <View
                        android:layout_width="@dimen/_4sdp"
                        android:layout_height="@dimen/_4sdp"
                        android:layout_gravity="end"
                        android:layout_margin="@dimen/_4sdp"
                        android:background="@drawable/shape_circle_red" />

                </FrameLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btInstagram"
                    android:layout_width="@dimen/_28sdp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_toStartOf="@+id/btDownload"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="@dimen/_4sdp"
                    app:srcCompat="@drawable/ic_instagram"
                    app:tint="@color/white" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/rlEdt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@drawable/shape_rl_edt_dark"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/btCleanEdt"
                        android:layout_width="@dimen/_22sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/_6sdp"
                        android:background="?android:selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="@dimen/_6sdp"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_close"
                        app:tint="@color/black" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toStartOf="@+id/btCleanEdt"
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/san_r"
                        android:hint="@string/txt_hide_edt"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:lines="1"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingTop="@dimen/_4sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_4sdp"
                        android:scrollHorizontally="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray5A5757"
                        android:textSize="@dimen/_12sdp" />

                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btStartDownload"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_36sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:alpha="0.5"
                    android:background="@drawable/ripper_cta_gray"
                    android:fontFamily="@font/san_m"
                    android:text="@string/txt_download"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="@+id/rlEdt"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btPaste"
                    app:layout_constraintTop_toBottomOf="@+id/rlEdt" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btPaste"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_36sdp"
                    android:background="@drawable/ripple_btn_gray"
                    android:fontFamily="@font/san_m"
                    android:text="@string/txt_paste_link"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toStartOf="@+id/btStartDownload"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/rlEdt"
                    app:layout_constraintTop_toTopOf="@+id/btStartDownload" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/crPreview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:visibility="gone"
                    app:cardBackgroundColor="#262a34"
                    app:cardCornerRadius="@dimen/_6sdp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintTop_toBottomOf="@id/btStartDownload"
                    tools:visibility="visible">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/_16sdp"
                        android:paddingBottom="@dimen/_12sdp">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <FrameLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_12sdp">

                                <com.makeramen.roundedimageview.RoundedImageView
                                    android:id="@+id/ivPreview"
                                    android:layout_width="@dimen/_60sdp"
                                    android:layout_height="@dimen/_60sdp"
                                    android:scaleType="centerCrop"
                                    app:riv_oval="true" />

                                <ProgressBar
                                    android:id="@+id/progressBarAvatar"
                                    android:layout_width="@dimen/_28sdp"
                                    android:layout_height="@dimen/_28sdp"
                                    android:layout_gravity="center" />

                            </FrameLayout>

                            <androidx.appcompat.widget.LinearLayoutCompat
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_12sdp"
                                android:layout_marginEnd="@dimen/_12sdp"
                                android:orientation="vertical">

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/tvTitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:fontFamily="@font/san_m"
                                    android:maxLines="2"
                                    android:text="@string/txt_option_download"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_12sdp"
                                    android:textStyle="bold" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    android:id="@+id/tvMessage"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/_6sdp"
                                    android:ellipsize="end"
                                    android:fontFamily="@font/san_r"
                                    android:lineSpacingExtra="@dimen/_2sdp"
                                    android:maxLines="2"
                                    android:text="@string/txt_message_option_download"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/_10sdp" />

                            </androidx.appcompat.widget.LinearLayoutCompat>

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_12sdp"
                            android:layout_marginEnd="@dimen/_12sdp">

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btWatchNow"
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_34sdp"
                                android:layout_weight="1"
                                android:background="@drawable/ripper_cta_watch_video"
                                android:fontFamily="@font/san_m"
                                android:text="@string/txt_watch_now"
                                android:textAllCaps="false"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_12sdp"
                                app:layout_constraintEnd_toStartOf="@+id/btStartDownload"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toStartOf="@+id/rlEdt"
                                app:layout_constraintTop_toTopOf="@+id/btStartDownload" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/crPreview">

                    <include
                        android:id="@+id/guide"
                        layout="@layout/layout_guide" />


                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>